# RustyFish

./: README.md
rusty-fish/: Cargo.toml
rusty-fish-web/: package-lock.json  package.json  tailwind.config.js
rusty-fish-web/src/: App.tsx  index.css
rusty-fish-web/src/components/: Piece.tsx  Square.tsx
rusty-fish-web/src/components/shadcn/: button.tsx  input.tsx
rusty-fish-web/src/pages/: Game.tsx
rusty-fish-web/src/types/: pieces.ts
rusty-fish/src/: lib.rs
rusty-fish/src/engine/: board.rs  game_state.rs  mod.rs  move_generator.rs  piece.rs  piece_move.rs  position.rs  precomputed.rs
rusty-fish/src/utils/: board_representation.rs  mod.rs
