[package]
name = "rusty-fish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }

[[bin]]
name = "rusty-fish"
path = "src/lib.rs"